awx-and-traefik.yml
apiVersion: v1
kind: Service
metadata:
  name: ranting-condor-grafana
  namespace: default
  labels:
    app: grafana
spec:
  ports:
  - name: service
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
---
# admin:U8EZ1JkYCKQrDGsT2WoOodzxzPGDZzwGqVoDdDg2
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ui
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: grafana.minikube
    http:
      paths:
      - backend:
          serviceName: ranting-condor-grafana
          servicePort: service


---
apiVersion: v1
kind: Service
metadata:
  name: awx-rmq-mgmt
  namespace: awx
  labels:
    name: awx-rmq-mgmt
spec:
  ports:
  - name: rmqmgmt
    port: 15672
    protocol: TCP
    targetPort: 15672
---
# awx:awxpass
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rabbitmq-web-ui
  namespace: awx
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: rabbitmq.minikube
    http:
      paths:
      - backend:
          serviceName: awx-rmq-mgmt
          servicePort: rmqmgmt


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik-ui.minikube
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80
